--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,6 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+MusicStore/obj/Debug/App.g.i.cs
+MusicStore/obj/Debug/MusicStore.csproj.CoreCompileInputs.cache
+*.cache
