--- a/MusicStore/MusicStore.csproj
+++ b/MusicStore/MusicStore.csproj
@@ -96,6 +96,7 @@
     <Compile Include="BannerSetup.xaml.cs">
       <DependentUpon>BannerSetup.xaml</DependentUpon>
     </Compile>
+    <Compile Include="DBConn\DBLibrary.cs" />
     <Compile Include="DBConn\DBUser.cs" />
     <Compile Include="MainMenu.xaml.cs">
       <DependentUpon>MainMenu.xaml</DependentUpon>
@@ -104,6 +105,7 @@
     <Page Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Page>
     <Compile Include="DBConn\DBConn.cs" />
     <Compile Include="Register.xaml.cs">
@@ -120,6 +122,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
     <Compile Include="Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
@@ -133,13 +136,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Style\Darkmode.xaml">
+    <Content Include="Style\Darkmode.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </Page>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Page Include="Style\Lightmode.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Page>
     <Page Include="Style\Startowy.xaml">
       <SubType>Designer</SubType>
@@ -172,7 +177,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="obrazy\note-gb4fa8b680_640.png" />
+    <Content Include="obrazy\note-gb4fa8b680_640.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Resource Include="placeholder_bannerbackground.jpg" />
   </ItemGroup>
   <ItemGroup>
@@ -184,7 +191,9 @@
     <Resource Include="logo.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="obrazy\light.png" />
+    <Content Include="obrazy\light.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
