Wczytywanie configu z bazy i wysyłanie go do bazy

--- a/.gitignore
+++ b/.gitignore
@@ -412,3 +412,4 @@ MusicStore/obj/Debug/MusicStore.csproj.CoreCompileInputs.cache
 MusicStore/obj/Debug/MusicStore.csproj.CoreCompileInputs.cache
 MusicStore/obj/Debug/MusicStore_MarkupCompile.i.cache
 MusicStore/obj/Debug/MusicStore.csproj.CoreCompileInputs.cache
+MusicStore/obj/Debug/MusicStore.csproj.CoreCompileInputs.cache
