BannerSetup Style Change (WIP)
Co-Authored-By: Abstrakcjonizm <116067208+Abstrakcjonizm@users.noreply.github.com>

--- a/MusicStore/MusicStore.csproj
+++ b/MusicStore/MusicStore.csproj
@@ -210,6 +210,7 @@
     <Content Include="obrazy\music vibe.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Resource Include="obrazy\thanos.png" />
     <Content Include="Style\Darkmode.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
