--- a/MusicStore/MusicStore.csproj
+++ b/MusicStore/MusicStore.csproj
@@ -128,6 +128,7 @@
     <Compile Include="BannerSetup.xaml.cs">
       <DependentUpon>BannerSetup.xaml</DependentUpon>
     </Compile>
+    <Compile Include="BPMDetector.cs" />
     <Compile Include="DBConn\DBAlbum.cs" />
     <Compile Include="DBConn\DBAuthor.cs" />
     <Compile Include="DBConn\DBConfig.cs" />
