--- a/MusicStore/MusicStore.csproj
+++ b/MusicStore/MusicStore.csproj
@@ -157,6 +157,7 @@
     </Compile>
     <Compile Include="Utility\Security.cs" />
     <Compile Include="Style\StyleManager.cs" />
+    <Compile Include="Utility\UserFunctions.cs" />
     <Page Include="App.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
