--- a/MusicStore/MusicStore.csproj
+++ b/MusicStore/MusicStore.csproj
@@ -155,6 +155,9 @@
     <Compile Include="Pages\Options.xaml.cs">
       <DependentUpon>Options.xaml</DependentUpon>
     </Compile>
+    <Compile Include="TrackManager.xaml.cs">
+      <DependentUpon>TrackManager.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Utility\DatePickerCalendar.cs" />
     <Compile Include="Utility\Security.cs" />
     <Compile Include="Style\StyleManager.cs" />
@@ -258,6 +261,10 @@
       <Generator>MSBuild:Compile</Generator>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Page Include="TrackManager.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
